# shadowquic_interop

./: .gitignore  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  interop.yml
docker/: mihomo-meta.Dockerfile  proxypen.Dockerfile  quicproxy.Dockerfile
results/: 2026-07-19T05-14-47Z.json  2026-07-19T07-34-55Z.json  2026-07-19T10-11-55Z.json  2026-07-19T10-40-02Z.json  2026-07-19T11-38-53Z.json  2026-07-19T17-30-34Z.json  2026-07-20T18-27-51Z.json  2026-07-21T04-10-59Z.json  2026-07-21T17-51-46Z.json  2026-07-22T17-47-52Z.json  2026-07-23T17-54-30Z.json  2026-07-24T17-57-53Z.json
shadowquic_interop/: __init__.py  adapters.py  backend.py  cli.py  models.py  report.py  runner.py
tests/: test_adapters.py  test_backend.py  test_report.py  test_runner.py
web/: app.js  index.html  style.css
