[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowquic-interop"
version = "0.1.0"
description = "ShadowQUIC client/server interoperability runner and report generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
shadowquic-interop = "shadowquic_interop.cli:main"

[tool.setuptools.packages.find]
include = ["shadowquic_interop*"]

